# TerseTalk

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROMPT.md  README.md  RESEARCH_PROPOSAL.md  pyproject.toml  requirements.txt  setup.sh  slurm_eval.sh  todos.txt
.claude_code/: settings.json
benchmarks/: __init__.py  run_all.py  serde_bytes.py  streaming_boundaries.py  tag_extraction.py
configs/: calibration.yaml
docs/: POSTMORTEM.md
scripts/: analyze_v05.py  baselines_smoke.py  benchmarks_run_all.py  calibrate_caps.py  datasets_smoke.py  hybrid_gate_smoke.py  jsonl_guard.py  memory_smoke.py  metrics_smoke.py  model_smoke.py  noninferiority_smoke.py  pipeline_smoke.py  protocol_handler_smoke.py  repro_smoke.py  results_smoke.py  run_evaluation.py  run_significance.py  run_v05.py  structured_demo.py  summarize_smoke.py
setup/: activate_tersetalk.sh  setup_compute_node.sh
tersetalk/: __init__.py  baselines.py  calibration.py  datasets.py  hybrid_gate.py  memory.py  metrics.py  model_io.py  noninferiority.py  pipeline_runner.py  protocol_handler.py  protocol_jsonl.py  reproducibility.py  results_manager.py  statistics.py  structured.py  summarization.py
tests/: test_analyze_min.py  test_analyze_v05_smoke.py  test_baselines.py  test_baselines_params.py  test_benchmarks.py  test_calibration.py  test_cli_scaffold.py  test_datasets.py  test_hybrid_gate.py  test_memory_store.py  test_metrics.py  test_model_io.py  test_noninferiority.py  test_pipeline_robustness.py  test_pipeline_runner.py  test_protocol_handler.py  test_protocol_jsonl.py  test_reproducibility.py  (+9 more)
(+169 files in other folders)
