[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tersetalk"
version = "0.0.1"
description = "TerseTalk reproducibility infrastructure (PR-00)"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["tersetalk*"]
exclude = ["src*"]
