[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tersetalk"
version = "0.0.2"
description = "TerseTalk reproducibility + scaffold (PR-00/PR-01)"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["tersetalk*"]
